samples/_failures_safe/1761002656_c4b504_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef33235e.c: In function ‘main’:
./samples/SAFE/__tmp_ef33235e.c:142:9: error: expected expression at end of input
  142 |         if (!read_matrix(&a))
      |         ^~
./samples/SAFE/__tmp_ef33235e.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef33235e.c:142:9: error: expected declaration or statement at end of input
